2007-06-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	Add Embedded Planets EP5200 which is the same as the Freescale
	5200Lite (a.k.a. IceCube) evaluation board.
	* Makefile.am: Add linkcmds.ep5200.
	Add -DMPC5200_BAPI_LIBC_HEADERS to remove some warnings in bestcomm.
	* preinstall.am: Add linkcmds.ep5200.
	* clock/clock.c: Correct math for prescaler/counter when bus speed
	is high enough to require multiple passes of loop.
	* console/console.c: Use same math for initial baud rate as when it
	is changed via ioctl.  When HAS_UBOOT is defined, initialize console
	to the same baud as it was with U-Boot.
	* include/bsp.h: Add EP5200 and console boot baud support.
	* include/mpc5200.h: Spacing.
	* startup/bspstart.c: If HAS_UBOOT and SHOW_MORE_INIT_SETTINGS are
	both defined, dump the U-Boot BD info structure.
	* vectors/vectors.S: ep5200 cannot use vectors segment.  When loading
	it, U-Boot freezes.  Besides, U-Boot can automatically start the BSP
	so we do not have to run from board reset.
	* startup/linkcmds.ep5200: New file.

2007-04-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* mscan/mscan.c: Use size_t for message sizes. Remove absurd type
	  cast.

2007-04-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove qrtems_debug.

2007-04-06	Ralf Corsépius	<ralf.corsepius@rtems.org>

	* bsp_specs: Remove lib (Now expected to exist in GCC).

2007-03-12	Joel Sherrill <joel@OARcorp.com>

	* clock/clock.c, console/console.c, ide/pcmcia_ide.c, irq/irq.c,
	irq/irq.h, irq/irq_asm.S, irq/irq_init.c, nvram/nvram.c,
	nvram/nvram.h, slicetimer/slicetimer.c, startup/bspstart.c,
	vectors/vectors.h, vectors/vectors_init.c: Correct license URL and/or
	fix mistake in copyright notice. Both of these mistakes appear to be
	from code submitted after these changes were made previously.

2007-03-11	Joel Sherrill <joel@OARcorp.com>

	* startup/bspstart.c: Remove assignments of
	Cpu_table.do_zero_of_workspace to TRUE since TRUE is the default
	value in boot_card.c
